Found error on why Backgrounds didn't load . use livedate.postvalue() instead of normal value to fix it.
Made connection with api and Backgrounds, "saved" it locally and used the local storage to "parse" them to the class Background to use in fragment. (hardcoded test)

--- a/app/src/main/res/layout/stage_fragment.xml
+++ b/app/src/main/res/layout/stage_fragment.xml
@@ -14,8 +14,19 @@
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/level1"
         tools:context=".stage.StageFragment">
+
+        <ImageView
+            android:id="@+id/StageBackground"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
             android:id="@+id/HpbarEnemy"
