Made small changes on how to implement the relationships, this works with id, but not with objects (Yet)
Rewritten the way of handling Entities, Models & changed the way of how to connect with database, upgraded version to 2

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -62,4 +62,9 @@
             android:id="@+id/action_bagFragment_to_mainGameFragment"
             app:destination="@id/mainGameFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="be.vives.gamesitor.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
