Implemented Login, when switching from login to main fragment the app crashes after 5 secs.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/item_Name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/item_name"
+                android:text="@{viewModel.selectedItem.name}"
                 android:textColor="#de000000"
                 android:textSize="39sp"
                 app:layout_constraintBottom_toBottomOf="parent"
