--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -36,7 +36,8 @@
             app:destination="@id/mainGameFragment" />
         <action
             android:id="@+id/action_shopFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
+            app:destination="@id/detailFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_shopFragment_to_mainGameFragment2"
             app:destination="@id/mainGameFragment" />
@@ -89,6 +90,9 @@
             app:argType="integer" />
         <action
             android:id="@+id/action_detailFragment_to_shopFragment"
-            app:destination="@id/shopFragment" />
+            app:destination="@id/shopFragment"
+            app:launchSingleTop="false"
+            app:popUpTo="@id/shopFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
