--- a/app/src/main/res/layout/shop_fragment.xml
+++ b/app/src/main/res/layout/shop_fragment.xml
@@ -30,18 +30,18 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RVShop"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="300dp"
             android:padding="6dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.238"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.261"
+            app:layout_constraintVertical_bias="0.497"
             app:listData="@{viewmodel.items}"
-            app:spanCount="6"
+            app:spanCount="7"
             tools:itemCount="20"
             tools:listitem="@layout/grid_view_item">
 
@@ -64,7 +64,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="#881E03"
-            android:text="Current Coins :"
+            android:text="@string/current_coins"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="#881E03"
-            android:text="0"
+            android:text="@{Long.toString(viewmodel.player.coins)}"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
