--- a/app/src/main/res/layout/stage_fragment.xml
+++ b/app/src/main/res/layout/stage_fragment.xml
@@ -35,8 +35,8 @@
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:max="@{viewmodel.settedStage.character.stats.lifepoints}"
-            android:progress="@{viewmodel.settedStage.character.stats.lifepoints}"
+            android:max="@{viewmodel.hpEnemyStart}"
+            android:progress="@{viewmodel.hpEnemy}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.986"
@@ -49,8 +49,8 @@
             style="@android:style/Widget.ProgressBar.Horizontal"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:max="@{viewmodel.hero.stats.lifepoints}"
-            android:progress="@{viewmodel.hero.stats.lifepoints}"
+            android:max="@{viewmodel.hpheroStart}"
+            android:progress="@{viewmodel.hphero}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -62,7 +62,7 @@
             android:id="@+id/lblTimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Timer comes here in future"
+            android:text="Timer comes here"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/HpbarEnemy"
@@ -102,7 +102,7 @@
             app:imageUrlDataGrid="@{viewmodel.hero.image}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.062"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/lblTimer"
             app:layout_constraintVertical_bias="0.861" />
@@ -115,7 +115,7 @@
             app:imageUrlDataGrid="@{viewmodel.enemy.image}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.969"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/lblTimer"
             app:layout_constraintVertical_bias="0.861" />
