Last Working Version : implemented stage progression into the game. when stage 10 (final stage) is beaten then it resets to first stage. cleaned up some code.

--- a/app/src/main/res/layout/inventory_fragment.xml
+++ b/app/src/main/res/layout/inventory_fragment.xml
@@ -19,7 +19,9 @@
             android:id="@+id/lblInventory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#94FFFFFF"
             android:text="@string/you_have_no_items_in_your_inventory_you_can_buy_items_in_the_shop"
+            android:textSize="30dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
