--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -37,6 +37,7 @@
             android:id="@+id/item_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:text="@{viewModel.selectedItem.name}"
             android:textColor="#de000000"
             android:textSize="39sp"
