--- a/app/src/main/res/layout/stage_fragment.xml
+++ b/app/src/main/res/layout/stage_fragment.xml
@@ -33,13 +33,15 @@
         <ProgressBar
             android:id="@+id/HpbarEnemy"
             style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_width="250dp"
             android:max="@{viewmodel.hpEnemyStart}"
             android:progress="@{viewmodel.hpEnemy}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.986"
+            app:layout_constraintHorizontal_weight="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04" />
@@ -47,22 +49,23 @@
         <ProgressBar
             android:id="@+id/HpBarHero"
             style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:max="@{viewmodel.hpheroStart}"
-            android:progress="@{viewmodel.hphero}"
+            android:max="@{viewmodel.hpHeroStart}"
+            android:progress="@{viewmodel.hpHero}"
+            android:layout_width="250dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_weight="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04" />
 
         <TextView
-            android:id="@+id/lblTimer"
+            android:id="@+id/lblStageName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Timer comes here"
+            android:text="@{viewmodel.settedStage.name}"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/HpbarEnemy"
@@ -104,7 +107,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/lblTimer"
+            app:layout_constraintTop_toTopOf="@+id/lblStageName"
             app:layout_constraintVertical_bias="0.861" />
 
         <ImageView
@@ -117,7 +120,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/lblTimer"
+            app:layout_constraintTop_toTopOf="@+id/lblStageName"
             app:layout_constraintVertical_bias="0.861" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
