--- a/app/src/main/res/layout/main_game_fragment.xml
+++ b/app/src/main/res/layout/main_game_fragment.xml
@@ -103,8 +103,8 @@
             android:text="@{Long.toString(viewmodel.player.coins)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.844"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.24"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.04" />
 
