--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -65,6 +65,9 @@
         <action
             android:id="@+id/action_viewHeroFragment_to_equipmentListFragment"
             app:destination="@id/equipmentListFragment" />
+        <action
+            android:id="@+id/action_viewHeroFragment_to_statsFragment"
+            app:destination="@id/statsFragment" />
     </fragment>
     <fragment
         android:id="@+id/bagFragment"
@@ -160,6 +163,16 @@
             android:id="@+id/action_stageResultFragment_to_mainGameFragment"
             app:destination="@id/mainGameFragment"
             app:popUpTo="@id/mainGameFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/statsFragment"
+        android:name="be.vives.gamesitor.stats.StatsFragment"
+        android:label="stats_fragment"
+        tools:layout="@layout/stats_fragment" >
+        <action
+            android:id="@+id/action_statsFragment_to_viewHeroFragment"
+            app:destination="@id/viewHeroFragment"
             app:popUpToInclusive="true" />
     </fragment>
 </navigation>
