--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -49,10 +49,13 @@
         tools:layout="@layout/stage_fragment" >
         <action
             android:id="@+id/action_stageFragment_to_mainGameFragment"
-            app:destination="@id/mainGameFragment" />
+            app:destination="@id/mainGameFragment"
+            app:popUpTo="@id/mainGameFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_stageFragment_to_stageResultFragment"
-            app:destination="@id/stageResultFragment" />
+            app:destination="@id/stageResultFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/viewHeroFragment"
@@ -90,6 +93,7 @@
         <action
             android:id="@+id/action_settingsFragment_to_mainGameFragment"
             app:destination="@id/mainGameFragment"
+            app:popUpTo="@id/mainGameFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -111,10 +115,13 @@
         <action
             android:id="@+id/action_detailFragment_to_bagFragment"
             app:destination="@id/bagFragment"
+            app:popUpTo="@id/bagFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_detailFragment_to_viewHeroFragment"
-            app:destination="@id/viewHeroFragment" />
+            app:destination="@id/viewHeroFragment"
+            app:popUpTo="@id/viewHeroFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/loadingFragment"
@@ -173,6 +180,7 @@
         <action
             android:id="@+id/action_statsFragment_to_viewHeroFragment"
             app:destination="@id/viewHeroFragment"
+            app:popUpTo="@id/viewHeroFragment"
             app:popUpToInclusive="true" />
     </fragment>
 </navigation>
